Modify .env file with unique bucket name
Updated the .env file with specific project details.

--- a/tensorflow-vertexai-image-classifier/.env
+++ b/tensorflow-vertexai-image-classifier/.env
@@ -1,5 +1,6 @@
-# copy to .env and fill these in
+@'
 PROJECT_ID=your-gcp-project-id
 LOCATION=us-central1
-BUCKET=gs://your-bucket-name   # no trailing slash
+BUCKET=gs://your-unique-bucket-name   # no trailing slash
 MODEL_DISPLAY_NAME=tf-cnn-fmnist-v1
+'@ | Set-Content .\.env
